<!--/**-->
<!--    * Lab 2 - Assignment-->
<!--    * Student Name: Giang Nguyen-->
<!--    * Student# 301033256-->
<!--    * Professor: Haki Sharifi-->
<!--    * COMP 304 - 002-->
<!--    * */-->

<resources>
    <string name="app_name" translatable="false">GiangLab2</string>
    <string name="logo_description" translatable="false">LeaseOrRentHome Inc.</string>
    <string name="enter_btn">Enter</string>
    <string name="apartment">Apartment</string>
    <string name="detached_home">Detached home</string>
    <string name="semi_detached_home">Semi-detached home</string>
    <string name="condo">Condominium apartment</string>
    <string name="town_house">Town house</string>
    <string-array name="house_type">
        <item>Apartment</item>
        <item>Detached home</item>
        <item>Semi-detached home</item>
        <item>Condominium apartment</item>
        <item>Town house</item>
    </string-array>
    <string name="hint_fullname">Enter your full name</string>
    <string name="hint_card_number">Enter your debit/credit card number</string>
    <string name="hint_billing_address">Enter your billing address</string>
    <string name="hint_postal_code">Enter your postal code</string>
    <string name="hint_phone">Enter your phone number</string>
    <string name="prompt_select_type">Choose the type of house you want to buy</string>
    <string name="submit">Next</string>
    <string name="payment">Checkout</string>
    <string name="processing">Processing payment...</string>
    <string name="selection_error">Please select at least 1 house you want.!</string>
</resources>