<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NguyenPaymentActivity">

    <EditText
        android:id="@+id/giangFullNameTv"
        android:layout_width="386dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/hint_fullname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/giangBillingAdressTv"
        android:layout_width="383dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_billing_address"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giangCardNumberTv" />

    <EditText
        android:id="@+id/giangPostalCodeTv"
        android:layout_width="384dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_postal_code"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giangBillingAdressTv" />

    <EditText
        android:id="@+id/giangPhoneTv"
        android:layout_width="384dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giangPostalCodeTv" />

    <EditText
        android:id="@+id/giangCardNumberTv"
        android:layout_width="384dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_card_number"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giangFullNameTv" />

    <Button
        android:id="@+id/giangPaymentBtn"
        style="@style/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/payment"
        app:layout_constraintTop_toBottomOf="@+id/giangPhoneTv" />

    <ProgressBar
        android:id="@+id/giangProgressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/giangProcessTv"
        style="@style/informative_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/processing"
        android:visibility="invisible" />

</LinearLayout>